--- a/nx.json
+++ b/nx.json
@@ -11,7 +11,7 @@
       "!{projectRoot}/tsconfig.spec.json",
       "!{projectRoot}/src/test-setup.[jt]s"
     ],
-    "sharedGlobals": []
+    "sharedGlobals": ["{workspaceRoot}/.github/workflows/ci.yml"]
   },
   "nxCloudId": "6818ac8760708f66440c01c7",
   "plugins": [
