--- a/apps/acme-web/tsconfig.app.json
+++ b/apps/acme-web/tsconfig.app.json
@@ -35,6 +35,9 @@
   "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"],
   "references": [
     {
+      "path": "../../libs/orders/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/products/tsconfig.lib.json"
     }
   ]
