--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,4 +52,8 @@ jobs:
 
       - name: Push Docker image to Docker Hub
         run: docker push ayansonarcanys/acme-web:${{ github.sha }}
-
+      - name: Tag image as latest
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker tag ayansonarcanys/acme-web:${{ github.sha }} ayansonarcanys/acme-web:latest
+          docker push ayansonarcanys/acme-web:latest
