--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,14 +44,21 @@ jobs:
       # Nx Affected runs only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
       # When you enable task distribution, run the e2e-ci task instead of e2e
       - run: npx nx affected -t lint build --base=${{ env.NX_BASE }} --head=${{ env.NX_HEAD }}
+
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Build and push Docker image to Dockerhub
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: apps/acme-web/Dockerfile
+          push: true
+          tags: ayansonarcanys/acme-web:${{ github.sha }}
 
-      - name: Build Docker image
-        run: docker build -t ayansonarcanys/acme-web:${{ github.sha }} -f apps/acme-web/Dockerfile .
-
-      - name: Push Docker image to Docker Hub
-        run: docker push ayansonarcanys/acme-web:${{ github.sha }}
       - name: Tag image as latest
         if: github.ref == 'refs/heads/main'
         run: |
