--- a/apps/acme-web/tsconfig.app.json
+++ b/apps/acme-web/tsconfig.app.json
@@ -32,13 +32,5 @@
     "eslint.config.cjs",
     "eslint.config.mjs"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"],
-  "references": [
-    {
-      "path": "../../libs/orders/tsconfig.lib.json"
-    },
-    {
-      "path": "../../libs/products/tsconfig.lib.json"
-    }
-  ]
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
 }
