--- a/apps/inventory/tsconfig.app.json
+++ b/apps/inventory/tsconfig.app.json
@@ -29,9 +29,5 @@
     "eslint.config.mjs"
   ],
   "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"],
-  "references": [
-    {
-      "path": "../../libs/products/tsconfig.lib.json"
-    }
-  ]
+  "references": []
 }
